# transit

./: .gitignore  Cargo.toml  osm_convert.py  readme.md
docs/: CNAME  h3.json  index.html  index.js
docs/h3/: 8409927ffffffff.json  8409935ffffffff.json  8409937ffffffff.json  841f001ffffffff.json  841f009ffffffff.json  841f00dffffffff.json  841f041ffffffff.json  841f043ffffffff.json  841f045ffffffff.json  841f047ffffffff.json  841f049ffffffff.json  841f04bffffffff.json  841f04dffffffff.json  841f051ffffffff.json  841f055ffffffff.json  841f059ffffffff.json  841f05bffffffff.json  841f05dffffffff.json  841f065ffffffff.json  841f06bffffffff.json  841f06dffffffff.json  841f0c9ffffffff.json  841f15bffffffff.json  841f203ffffffff.json  841f205ffffffff.json  841f207ffffffff.json  841f209ffffffff.json  841f20dffffffff.json  841f211ffffffff.json  841f217ffffffff.json  841f219ffffffff.json  841f221ffffffff.json  841f223ffffffff.json  841f225ffffffff.json  841f227ffffffff.json  841f229ffffffff.json  841f22bffffffff.json  841f22dffffffff.json  841f231ffffffff.json  841f233ffffffff.json  (+52 more)
notebooks/: Data_preprocessing.ipynb  calculate_scores.ipynb  calculate_scores_local.ipynb  design_function.ipynb  gtfs_kit.ipynb  gtfs_py.ipynb  notebook.ipynb  osm_convert.py
notebooks/data/: GHS_SMOD_POP2015_GLOBE_R2019A_54009_1K_V2_0_18_2.tif  GHS_SMOD_POP2015_GLOBE_R2019A_54009_1K_V2_0_19_2.tif
python/: mymodule.py
resources/rejseplanen/: agency.txt  attributions.txt  calendar.txt  routes.txt  (+3 more)
src/: async_experiments.rs  gtfs_reader.rs  lib.rs  main.rs
visualizer/: index.html  index.js
