[package]
name = "rs_transit"
version = "0.1.0"
edition = "2021"

[lib]
name = "rs_transit"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version= "0.15.1", features=["extension-module"]}
gtfs-structures = "0.31.0"
h3ron = "0.14.0"
geo-types = "0.7.3"
geojson = "0.22.2"

zip = "0.6.0"
itertools = "0.10.2"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


chrono = "0.4"