[package]
name = "rs_transit"
version = "0.1.0"
edition = "2021"

[lib]
name = "rs_transit"
crate-type = ["cdylib"]

[[bin]]
name = "rs_transit"

[dependencies]
pyo3 = {version= "0.15.1", features=["extension-module"]}
h3ron = "0.14.0"

zip = "0.6.0"
itertools = "0.10.2"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = "0.4"
tokio = { version = "1.18", features = ["full"] }
tokio-postgres = {version = "0.7.6", features = ["with-serde_json-1", "runtime"] }